matrix/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: tw-matrix-tuwunel
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tw-matrix-tuwunel
  template:
    metadata:
      labels:
        app: tw-matrix-tuwunel
    spec:
      containers:
      - name: tuwunel
        image: jevolk/tuwunel:main # REPLACEME
        ports:
        - name: http
          containerPort: 8008
        volumeMounts:
        - name: tuwunel-configs
          mountPath: /etc/tuwunel
          readOnly: true
        - name: tuwunel-data
          mountPath: /var/lib/tuwunel
      nodeSelector:
        home.bramble/has-storage: "true"
      volumes:
      - name: tuwunel-configs
        projected:
          sources:
          - configMap:
              name: tw-matrix-tuwunel-config
              items:
              - key: tuwunel.toml
                path: tuwunel.toml
          - secret:
              name: tw-matrix-tuwunel
              items:
              - key: .reg_token
                path: .reg_token
              - key: .turn_secret
                path: .turn_secret
  volumeClaimTemplates:
  - apiVersion: v1
    kind: PersistentVolumeClaim
    metadata:
      name: tuwunel-data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: local-path
      resources:
        requests:
          storage: 10Gi
