matrix/service-mautrix-discord.yaml
apiVersion: v1
kind: Service
metadata:
  name: tw-matrix-bridge-mautrix-discord
  namespace: tw-matrix
spec:
  clusterIP: None
  ports:
  - port: 29334
    targetPort: 29334
    protocol: TCP
  selector:
    app: tw-matrix-bridge-mautrix-discord
