matrix/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tw-matrix-tuwunel
  namespace: tw-matrix
spec:
  clusterIP: None
  ports:
  - port: 8008
    targetPort: 8008
    protocol: TCP
  selector:
    app: tw-matrix-tuwunel
