matrix/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: tw-matrix
spec:
  gatewayClassName: traefik
  listeners:
  - name: websecure
    port: 9443
    protocol: HTTPS
    hostname: chat.techwerkers.nl 
    tls:
      mode: Terminate
      certificateRefs:
      - group: ""
        kind: Secret
        name: tw-matrix-tls
        namespace: tw-matrix
  - name: websecure-ooye
    port: 9443
    protocol: HTTPS
    hostname: mautrix-discord.chat.techwerkers.nl 
    tls:
      mode: Terminate
      certificateRefs:
      - group: ""
        kind: Secret
        name: tw-matrix-tls
        namespace: tw-matrix
