matrix/httproute-mautrix-discord.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: tw-matrix-bridge-mautrix-discord
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: tw-matrix
  hostnames:
  - mautrix-discord.chat.techwerkers.nl 
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - group: ""
      kind: Service
      name: tw-matrix-bridge-mautrix-discord
      port: 29334
      weight: 1
