matrix/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: tw-matrix
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: tw-matrix
  hostnames:
  - chat.techwerkers.nl 
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - group: ""
      kind: Service
      name: tw-matrix-tuwunel
      port: 8008
      weight: 1
